(fix) Enabled vertical overflow in all-customers-table

--- a/css/main_content/all-customers-table.css
+++ b/css/main_content/all-customers-table.css
@@ -40,6 +40,7 @@
 
 section.all-customers-table {
   width: 95%;
+  overflow-y: auto;
 }
 
 section.all-customers-table .all-customers-table-layout {
